# MD-Converter

./: README.docx  README.html  README.md  pyproject.toml  requirements.txt
examples/: sample.docx  sample.html  sample.md
md2doc/: __init__.py  cli.py  docx_writer.py  html_writer.py  lang.py  mermaid.py  parser.py
tests/: test_basic.py
